fix to merge with more than 52 columns. still need to rewrite .toExcelNum and .toExcelColRow functions to handle rows past 676 and refs with 3 or more alpha characters.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "excel4node",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "keywords": [
     "excel",
     "spreadsheet",
-    "xlsx"
+    "xlsx",
+    "formatted",
+    "report"
   ],
   "description": "Library to create Formatted Excel Files.",
   "author": {
