--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "spreadsheet",
     "xlsx",
     "formatted",
-    "report"
+    "report",
+    "workbook",
+    "ooxml"
   ],
   "description": "Library to create Formatted Excel Files.",
   "author": {
@@ -24,7 +26,7 @@
     "jszip": "2.5.0",
     "mime": "1.3.4",
     "underscore": "1.8.3",
-    "xmlbuilder": "2.6.4"
+    "xmlbuilder": "3.1.0"
   },
   "repository": {
     "type": "git",
