--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "excel4node",
-  "version": "0.2.21.1",
+  "version": "0.2.22",
   "keywords": [
     "excel",
     "spreadsheet",
     "xlsx",
     "formatted",
+    "styled",
     "report",
     "workbook",
     "ooxml"
