--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "xmlbuilder": "3.1.0"
   },
   "devDependencies": {
-    "tape": "^4.4.0"
+    "pretty-data": "^0.40.0",
+    "tape": "^4.4.0",
+    "xmldom": "^0.1.19",
+    "xpath.js": "^1.0.6"
   }
 }
