--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
   "dependencies": {
     "image-size": "0.3.5",
     "jszip": "2.5.0",
+    "lodash": "^3.10.1",
     "mime": "1.3.4",
-    "underscore": "1.8.3",
     "xmlbuilder": "3.1.0"
   },
   "devDependencies": {
