--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "workbook",
     "ooxml"
   ],
-  "main": "./lib/index",
+  "main": "./distribution/index.js",
   "author": {
     "name": "Nater",
     "email": "nater@seas.harvard.edu"
@@ -32,7 +32,8 @@
   },
   "readmeFilename": "README.md",
   "scripts": {
-    "test": "NODE_ENV=test ./node_modules/tape/bin/tape ./tests/**/**/*.test.js"
+    "test": "NODE_ENV=test ./node_modules/tape/bin/tape ./tests/**/**/*.test.js",
+    "build": "babel source --presets babel-preset-es2015 --out-dir distribution"
   },
   "dependencies": {
     "image-size": "0.3.5",
@@ -42,6 +43,9 @@
     "xmlbuilder": "3.1.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.5.1",
+    "babel-polyfill": "^6.5.0",
+    "babel-preset-es2015": "^6.5.0",
     "pretty-data": "^0.40.0",
     "tape": "^4.4.0",
     "xmldom": "^0.1.19",
