--- a/package.json
+++ b/package.json
@@ -33,19 +33,22 @@
   "readmeFilename": "README.md",
   "scripts": {
     "test": "NODE_ENV=test ./node_modules/tape/bin/tape ./tests/**/**/*.test.js",
-    "build": "babel source --presets babel-preset-es2015 --out-dir distribution"
+    "build": "babel source --presets babel-preset-es2015 --out-dir distribution",
+    "document": "jsdoc ./source -r -d docs"
   },
   "dependencies": {
-    "image-size": "0.3.5",
+    "image-size": "0.4.0",
     "jszip": "2.5.0",
-    "lodash": "^3.10.1",
+    "lodash": "4.3.0",
     "mime": "1.3.4",
-    "xmlbuilder": "3.1.0"
+    "xmlbuilder": "4.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.5.1",
     "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "^6.5.0",
+    "babel-register": "^6.5.1",
+    "jsdoc-babel": "^0.1.0",
     "pretty-data": "^0.40.0",
     "tape": "^4.4.0",
     "xmldom": "^0.1.19",
