--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "bluebird": "^3.2.2",
+    "colors": "^1.1.2",
     "image-size": "0.4.0",
     "jszip": "2.5.0",
     "lodash": "4.3.0",
