--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "scripts": {
     "test": "NODE_ENV=test ./node_modules/tape/bin/tape -r babel-register ./tests/**/**/*.test.js",
     "build": "babel source --presets babel-preset-es2015 --out-dir distribution",
+    "watch": "babel source -w --presets babel-preset-es2015 --out-dir distribution",
     "document": "jsdoc ./source -r -d docs"
   },
   "dependencies": {
@@ -42,6 +43,7 @@
     "jszip": "2.5.0",
     "lodash": "4.3.0",
     "mime": "1.3.4",
+    "sloth-logger": "^1.0.2",
     "xmlbuilder": "4.2.1"
   },
   "devDependencies": {
