--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "image-size": "0.4.0",
     "jszip": "2.5.0",
     "lodash": "4.3.0",
-    "mime": "1.3.4",
+    "mime": "^1.3.4",
     "sloth-logger": "^1.0.2",
     "xmlbuilder": "4.2.1"
   },
