--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "readmeFilename": "README.md",
   "scripts": {
-    "test": "NODE_ENV=test ./node_modules/tape/bin/tape -r babel-register ./tests/**/**/*.test.js",
+    "test": "NODE_ENV=test ./node_modules/tape/bin/tape -r babel-register ./tests/*.test.js",
     "build": "babel source --presets babel-preset-es2015 -s --out-dir distribution",
     "watch": "babel source -w --presets babel-preset-es2015 -s --out-dir distribution",
     "document": "jsdoc ./source -r -d docs"
@@ -56,7 +56,8 @@
     "pretty-data": "^0.40.0",
     "source-map-support": "^0.4.0",
     "tape": "^4.4.0",
-    "xmldom": "^0.1.19",
+    "tape-promise": "^1.1.0",
+    "xmldom": "^0.1.22",
     "xpath.js": "^1.0.6"
   }
 }
