--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "test": "NODE_ENV=test ./node_modules/tape/bin/tape -r babel-register ./tests/*.test.js",
     "build": "./node_modules/babel-cli/bin/babel.js source --presets babel-preset-es2015 -s --out-dir distribution",
     "watch": "./node_modules/babel-cli/bin/babel.js source -w --presets babel-preset-es2015 -s --out-dir distribution",
-    "document": "jsdoc ./source -r -d docs"
+    "document": "jsdoc ./source -r -d docs",
+    "prepublish": "npm run build; npm run test"
   },
   "dependencies": {
     "colors": "^1.1.2",
