--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "excel4node",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Library to create Formatted Excel Files.",
   "engines": {
     "node": ">4.0.0"
@@ -47,6 +47,7 @@
     "lodash": "4.11.1",
     "mime": "^1.3.4",
     "sloth-logger": "^1.0.2",
+    "webworker-threads": "^0.7.5",
     "xmlbuilder": "8.2.2"
   },
   "devDependencies": {
