--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "excel4node",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Library to create Formatted Excel Files.",
   "engines": {
     "node": ">4.0.0"
@@ -41,25 +41,23 @@
     "prepublish": "npm run build; npm run test"
   },
   "dependencies": {
+    "babel-register": "^6.9.0",
     "colors": "^1.1.2",
     "image-size": "0.5.0",
-    "jszip": "2.6.0",
-    "lodash": "4.11.1",
+    "jszip": "^3.0.0",
+    "lodash": "4.13.1",
     "mime": "^1.3.4",
-    "sloth-logger": "^1.0.2",
-    "webworker-threads": "^0.7.5",
+    "sloth-logger": "^1.0.3",
     "xmlbuilder": "8.2.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.5.1",
-    "babel-polyfill": "^6.5.0",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-es2015-node4": "^2.0.3",
-    "babel-register": "^6.5.1",
-    "jsdoc-babel": "^0.1.0",
-    "pretty-data": "^0.40.0",
-    "source-map-support": "^0.4.0",
-    "tape": "^4.4.0",
+    "babel-cli": "^6.10.1",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015-node4": "^2.1.0",
+    "jsdoc-babel": "^0.2.1",
+    "source-map-support": "^0.4.1",
+    "tape": "^4.6.0",
     "tape-promise": "^1.1.0",
     "xmldom": "^0.1.22",
     "xpath.js": "^1.0.6"
