--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "excel4node",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "Library to create Formatted Excel Files.",
   "engines": {
     "node": ">4.0.0"
@@ -36,34 +36,31 @@
   "scripts": {
     "test": "NODE_ENV=test ./node_modules/tape/bin/tape -r babel-register ./tests/*.test.js",
     "cover": "NODE_ENV=test nyc tape -r babel-register ./tests/*.test.js",
-    "build": "./node_modules/babel-cli/bin/babel.js source --presets babel-preset-es2015 -s --out-dir distribution",
-    "watch": "./node_modules/babel-cli/bin/babel.js source -w --presets babel-preset-es2015 -s --out-dir distribution",
+    "build": "./node_modules/babel-cli/bin/babel.js source --presets babel-preset-env -s --out-dir distribution",
+    "watch": "./node_modules/babel-cli/bin/babel.js source -w --presets babel-preset-env -s --out-dir distribution",
     "document": "jsdoc ./source -r -d docs",
     "prepublish": "npm run build; npm run test"
   },
   "dependencies": {
-    "colors": "^1.1.2",
-    "image-size": "0.5.0",
-    "jszip": "^3.0.0",
-    "lodash": "4.13.1",
-    "mime": "^1.3.4",
-    "sloth-logger": "^1.0.3",
-    "xmlbuilder": "8.2.2"
+    "image-size": "0.6.1",
+    "jszip": "3.1.5",
+    "lodash": "4.17.4",
+    "mime": "1.4.1",
+    "sloth-logger": "1.0.3",
+    "xmlbuilder": "9.0.4"
   },
   "devDependencies": {
-    "babel-cli": "^6.10.1",
-    "babel-plugin-istanbul": "^2.0.3",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-es2015-node4": "^2.1.0",
-    "babel-register": "^6.9.0",
-    "jsdoc-babel": "^0.2.1",
-    "nyc": "^8.4.0",
-    "source-map-support": "^0.4.1",
-    "tape": "^4.6.0",
-    "tape-promise": "^1.1.0",
-    "xmldom": "^0.1.22",
-    "xpath.js": "^1.0.6"
+    "babel-cli": "6.26.0",
+    "babel-plugin-istanbul": "4.1.5",
+    "babel-preset-env": "1.6.1",
+    "babel-register": "6.26.0",
+    "jsdoc": "^3.5.5",
+    "nyc": "11.3.0",
+    "source-map-support": "0.5.0",
+    "tape": "4.8.0",
+    "tape-promise": "2.0.1",
+    "xmldom": "0.1.27",
+    "xpath.js": "1.0.7"
   },
   "nyc": {
     "instrument": false,
