--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "url": "https://github.com/natergj/excel4node/labels/bug"
   },
   "scripts": {
-    "test": "NODE_ENV=test ./node_modules/tape/bin/tape -r babel-register ./tests/*.test.js",
-    "cover": "NODE_ENV=test nyc tape -r babel-register ./tests/*.test.js",
-    "build": "./node_modules/babel-cli/bin/babel.js source --presets babel-preset-env -s --out-dir distribution",
-    "watch": "./node_modules/babel-cli/bin/babel.js source -w --presets babel-preset-env -s --out-dir distribution",
+    "test": "",
+    "cover": "",
+    "build": "tsc",
+    "watch": "tsc -w",
     "document": "jsdoc ./source -r -d docs",
-    "prepublish": "npm run build; npm run test"
+    "prepublishOnly": "npm run build; npm run test"
   },
   "dependencies": {
     "image-size": "0.6.1",
@@ -65,9 +65,6 @@
   "nyc": {
     "instrument": false,
     "sourceMap": false,
-    "reporter": [
-      "text-summary",
-      "html"
-    ]
+    "reporter": ["text-summary", "html"]
   }
 }
