--- a/package.json
+++ b/package.json
@@ -50,21 +50,21 @@
     "xmlbuilder": "9.0.4"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-plugin-istanbul": "4.1.5",
-    "babel-preset-env": "1.6.1",
-    "babel-register": "6.26.0",
     "jsdoc": "^3.5.5",
     "nyc": "11.3.0",
     "source-map-support": "0.5.0",
     "tape": "4.8.0",
     "tape-promise": "2.0.1",
+    "typescript": "^2.6.2",
     "xmldom": "0.1.27",
     "xpath.js": "1.0.7"
   },
   "nyc": {
     "instrument": false,
     "sourceMap": false,
-    "reporter": ["text-summary", "html"]
+    "reporter": [
+      "text-summary",
+      "html"
+    ]
   }
 }
