update tests to typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,7 @@
     "target": "ES2015",
     "module": "commonjs",
     "moduleResolution": "node",
-    "outDir": "dist",
-    "inlineSourceMap": true
+    "outDir": "dist"
   },
   "include": ["source/**/*.ts"]
 }
