--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "url": "https://github.com/natergj/excel4node/labels/bug"
   },
   "scripts": {
-    "test": "",
+    "test":
+      "nyc --reporter=lcov --require ts-node/register tape tests/**/*.test.ts | tap-spec; nyc report ---reporter=text",
     "cover": "",
     "build": "tsc",
     "watch": "tsc -w",
@@ -54,18 +55,19 @@
     "jsdoc": "^3.5.5",
     "nyc": "11.3.0",
     "source-map-support": "0.5.0",
+    "tap-spec": "^4.1.1",
     "tape": "4.8.0",
     "tape-promise": "2.0.1",
+    "ts-node": "^4.1.0",
     "typescript": "^2.6.2",
     "xmldom": "0.1.27",
     "xpath.js": "1.0.7"
   },
   "nyc": {
-    "instrument": false,
-    "sourceMap": false,
-    "reporter": [
-      "text-summary",
-      "html"
-    ]
+    "instrument": true,
+    "sourceMap": true,
+    "include": ["source/**/*.ts"],
+    "extension": [".ts"],
+    "reporter": ["text-summary", "html"]
   }
 }
