--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "main": "./distribution/index.js",
   "author": {
     "name": "Nater",
-    "email": "nater@seas.harvard.edu"
+    "email": "nater@iamnater.com"
   },
   "licenses": [
     {
@@ -42,25 +42,25 @@
     "prepublish": "npm run build; npm run test"
   },
   "dependencies": {
-    "image-size": "0.6.1",
+    "image-size": "0.6.3",
     "jszip": "3.1.5",
-    "lodash": "4.17.4",
-    "mime": "2.0.3",
+    "lodash": "4.17.10",
+    "mime": "2.3.1",
     "sloth-logger": "1.0.3",
-    "xmlbuilder": "9.0.4"
+    "xmlbuilder": "9.0.7"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
-    "babel-plugin-istanbul": "4.1.5",
-    "babel-preset-env": "1.6.1",
+    "babel-plugin-istanbul": "4.1.6",
+    "babel-preset-env": "1.7.0",
     "babel-register": "6.26.0",
-    "jsdoc": "^3.5.5",
-    "nyc": "11.3.0",
-    "source-map-support": "0.5.0",
-    "tape": "4.8.0",
+    "jsdoc": "3.5.5",
+    "nyc": "11.9.0",
+    "source-map-support": "0.5.6",
+    "tape": "4.9.1",
     "tape-promise": "2.0.1",
     "xmldom": "0.1.27",
-    "xpath.js": "1.0.7"
+    "xpath.js": "1.1.0"
   },
   "nyc": {
     "instrument": false,
