write final xlsx files with streams

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,9 @@
     ],
     "outDir": "./lib",
     "rootDir": "./src",
-    "strict": true,
-    "esModuleInterop": true  
+    // "strict": true,
+    "esModuleInterop": true,
+    "noImplicitAny": false
   },
   "files": [
     "src/index.ts"
