--- a/package.json
+++ b/package.json
@@ -48,10 +48,13 @@
     "mocha": "5.2.0",
     "nyc": "12.0.2",
     "prettier": "1.14.2",
+    "ts-json-schema-generator": "0.32.0",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
+    "typedoc": "0.12.0",
     "typescript": "3.0.1",
-    "typescript-json-schema": "0.31.0"
+    "typescript-json-schema": "0.31.0",
+    "typescript-to-json-schema": "0.6.0"
   },
   "dependencies": {
     "jszip": "3.1.5",
