Fix issue 226 manually merge default font with date format. Libreoffice does not use first font if no font set

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prepublish": "npm run build; npm run test"
   },
   "dependencies": {
+    "deepmerge": "2.1.1",
     "image-size": "0.6.3",
     "jszip": "3.1.5",
     "lodash": "4.17.10",
