--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     "deepmerge": "2.1.1",
     "image-size": "0.6.3",
     "jszip": "3.1.5",
-    "lodash": "4.17.10",
+    "lodash.get": "4.4.2",
+    "lodash.isequal": "4.5.0",
+    "lodash.isundefined": "3.0.1",
+    "lodash.reduce": "4.6.0",
     "mime": "2.3.1",
     "xmlbuilder": "10.0.0"
   },
