continue work on styles and worksheet options

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
   "printWidth": 140,
   "singleQuote": true,
-  "trailingComma": "es5",
-  "bracketSpacing": true
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "semi": true,
+  "arrowParens": "avoid"
 }
