--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prepublish": "npm run build; npm run test"
   },
   "dependencies": {
+    "crypto-js": "3.1.9-1",
     "deepmerge": "2.1.1",
     "image-size": "0.6.3",
     "jszip": "3.1.5",
