--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prebuild": "npm run clean",
     "build": "tsc",
     "clean": "rm -rf lib .coverage .nyc_output",
+    "compile:verify": "tsc --noEmit",
     "lint": "tslint 'src/**/*.ts'",
     "sample": "ts-node --project tsconfig.json sample.ts",
     "test": "NODE_ENV=test mocha --require ts-node/register --watch-extensions ts \"src/**/*.test*\"",
@@ -45,6 +46,7 @@
     "@types/jszip": "3.1.5",
     "@types/mocha": "5.2.6",
     "chai": "4.2.0",
+    "husky": "1.3.1",
     "mocha": "6.0.2",
     "nyc": "13.3.0",
     "prettier": "1.16.4",
@@ -55,5 +57,11 @@
   "dependencies": {
     "jszip": "3.2.1",
     "xmlbuilder": "11.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run compile:verify && npm test",
+      "pre-push": "npm run compile:verify && npm test"
+    }
   }
 }
