--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "build": "tsc",
     "clean": "rm -rf lib .coverage .nyc_output",
     "compile:verify": "tsc --noEmit",
+    "commit:hook": "npm run compile:verify && npm run prettier:verify && npm test",
+    "prepublish": "npm run commit:hook && pkg-ok && npm run build",
+    "prettier:verify": "prettier --check src/**/*.ts",
+    "prettier:fix": "prettier --write src/**/*.ts",
     "lint": "tslint 'src/**/*.ts'",
     "sample": "ts-node --project tsconfig.json sample.ts",
     "test": "NODE_ENV=test mocha --require ts-node/register --watch-extensions ts \"src/**/*.test*\"",
@@ -49,6 +53,7 @@
     "husky": "1.3.1",
     "mocha": "6.0.2",
     "nyc": "13.3.0",
+    "pkg-ok": "2.3.1",
     "prettier": "1.16.4",
     "ts-node": "8.0.3",
     "tslint": "5.14.0",
@@ -60,8 +65,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run compile:verify && npm test",
-      "pre-push": "npm run compile:verify && npm test"
+      "pre-commit": "npm run commit:hook",
+      "pre-push": "npm run commit:hook"
     }
   }
 }
