add docsify to project

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clean": "rm -rf lib .coverage .nyc_output",
     "compile:verify": "tsc --noEmit",
     "commit:hook": "npm run compile:verify && npm run prettier:verify && npm test",
+    "docs:watch": "docsify serve docs",
     "prepublish": "npm run commit:hook && pkg-ok && npm run build",
     "prettier:verify": "prettier --check src/**/*.ts",
     "prettier:fix": "prettier --write src/**/*.ts",
@@ -50,6 +51,7 @@
     "@types/jszip": "3.1.5",
     "@types/mocha": "5.2.6",
     "chai": "4.2.0",
+    "docsify-cli": "4.3.0",
     "husky": "1.3.1",
     "mocha": "6.0.2",
     "nyc": "13.3.0",
